# portfolio

./: .env.example  .gitignore  CLAUDE.md  README.md  commit-suggester.md  config.py  idea-solution-frontend.md  main.py  penply.md  petition-signer.md  pyproject.toml  realtime-helmet-detector.md  renamer.md  requirements.txt  socialapp.md  vector_database.py  video-summarizer.md
certification/: aws-cloud-practitioner.md
education/: bachelors.md  masters.md
experience/: offseason.md  qburst.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CertificationSection.css  CertificationSection.tsx  EducationModal.css  EducationModal.tsx  EducationSection.css  EducationSection.tsx  ExperienceSection.css  ExperienceSection.tsx  Footer.css  Footer.tsx  HackathonSection.css  HackathonSection.tsx  Header.css  Header.tsx  ProjectCard.css  ProjectCard.tsx  ProjectModal.css  ProjectModal.tsx  Timeline.css  Timeline.tsx
frontend/src/data/: portfolioData.ts
frontend/src/services/: apiService.ts
frontend/src/types/: portfolio.ts
hackathon/: ibm.md
projects/: commit-suggester.md  expense-tracker.md  from-home.md  idea-solution.md  oncotracker.md  penply.md  petition-signer.md  realtime-helmet-detector.md  renamer.md  socialapp.md  video-summarizer.md
src/api/: routes.py
src/models/: schemas.py
src/services/: chat_service.py  rag_service.py
tests/: test_api.py  test_chat_service.py  test_rag_service.py  test_vector_database.py
